--- a/css/Layout.css
+++ b/css/Layout.css
@@ -10,43 +10,64 @@ html, body {
 }
 
 .layout {
+  display: -ms-grid;
   display: grid;
   grid-gap: 4px;
-  grid-template-columns: 190px repeat(2, 1fr);
-  grid-template-rows: 70px 30px 0.8fr auto;
+  -ms-grid-columns: 190px (1fr)[2];
+      grid-template-columns: 190px repeat(2, 1fr);
+  -ms-grid-rows: 70px 30px 0.8fr auto;
+      grid-template-rows: 70px 30px 0.8fr auto;
   border: 4px solid red;
   height: 100%;
   overflow: auto;
   padding: 4px;
 }
+
 .layout > * {
   border: 2px solid #d9480f;
 }
+
 .layout .p1 {
+  -ms-grid-column: 1;
   grid-column: 1;
-  grid-row: 3/5;
+  -ms-grid-row: 3;
+  -ms-grid-row-span: 2;
+  grid-row: 3 / 5;
   background-color: blueviolet;
 }
+
 .layout .p2 {
   background-color: #ececec;
   overflow: auto;
 }
+
 .layout .p3 {
-  grid-column: 1/4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1 / 4;
+  -ms-grid-row: 2;
   grid-row: 2;
   background-color: #b44b91;
 }
+
 .layout .p4 {
   background-color: #d6d6d6;
   overflow: auto;
 }
+
 .layout .p7 {
-  grid-column: 1/4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1 / 4;
+  -ms-grid-row: 1;
   grid-row: 1;
   border: 2px solid #104581;
 }
+
 .layout .p8 {
-  grid-column: 1/4;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 3;
+  grid-column: 1 / 4;
   background-color: #52565a;
 }
 
@@ -89,45 +110,64 @@ table tr td {
 }
 
 .wrapper {
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
   grid-gap: 30px;
   grid-auto-rows: minmax(100px, auto);
 }
 
 .one {
-  grid-column: 1/3;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  -ms-grid-row: 1;
   grid-row: 1;
 }
 
 .two {
-  grid-column: 2/4;
-  grid-row: 1/3;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1 / 3;
 }
 
 .three {
+  -ms-grid-column: 1;
   grid-column: 1;
-  grid-row: 2/5;
+  -ms-grid-row: 2;
+  -ms-grid-row-span: 3;
+  grid-row: 2 / 5;
 }
 
 .four {
+  -ms-grid-column: 3;
   grid-column: 3;
+  -ms-grid-row: 3;
   grid-row: 3;
 }
 
 .five {
+  -ms-grid-column: 2;
   grid-column: 2;
+  -ms-grid-row: 4;
   grid-row: 4;
 }
 
 .six {
+  -ms-grid-column: 3;
   grid-column: 3;
+  -ms-grid-row: 4;
   grid-row: 4;
 }
 
 .sg-menu.horizontal .caption {
   display: none;
 }
+
 .sg-menu.horizontal .menu {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -135,9 +175,11 @@ table tr td {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
 }
+
 .sg-menu.horizontal .item .icon {
   display: none;
 }
+
 .sg-menu.horizontal li {
   display: inline-block !important;
 }
@@ -146,51 +188,90 @@ table tr td {
   height: 100%;
   overflow: auto;
   grid-gap: 0px;
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: 190px repeat(4, 1fr);
-  grid-template-rows: 30px 30px auto 30px 30px;
+  -ms-grid-columns: 190px (1fr)[4];
+      grid-template-columns: 190px repeat(4, 1fr);
+  -ms-grid-rows: 30px 30px auto 30px 30px;
+      grid-template-rows: 30px 30px auto 30px 30px;
 }
+
 .gtcomm .p1 {
+  -ms-grid-column: 1;
   grid-column: 1;
-  grid-row: 1/6;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 5;
+  grid-row: 1 / 6;
   background-color: #272727;
 }
+
 .gtcomm .p2 {
-  grid-column: 2/6;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
+  grid-column: 2 / 6;
+  -ms-grid-row: 1;
   grid-row: 1;
   background-color: #979797;
   overflow: auto;
 }
+
 .gtcomm .p3 {
-  grid-column: 2/6;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
+  grid-column: 2 / 6;
+  -ms-grid-row: 2;
   grid-row: 2;
   background-color: #3a3a3a;
 }
+
+.gtcomm .p3 > * {
+  display: inline-block;
+}
+
 .gtcomm .p4 {
-  grid-column: 2/4;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
+  grid-column: 2 / 4;
+  -ms-grid-row: 3;
   grid-row: 3;
   background-color: #bbbbbb;
   overflow: auto;
 }
+
 .gtcomm .p5 {
-  grid-column: 4/5;
+  -ms-grid-column: 4;
+  -ms-grid-column-span: 1;
+  grid-column: 4 / 5;
+  -ms-grid-row: 3;
   grid-row: 3;
   background-color: #cacaca;
   overflow: auto;
 }
+
 .gtcomm .p6 {
-  grid-column: 5/6;
+  -ms-grid-column: 5;
+  -ms-grid-column-span: 1;
+  grid-column: 5 / 6;
+  -ms-grid-row: 3;
   grid-row: 3;
   background-color: #706f6f;
   overflow: auto;
 }
+
 .gtcomm .p7 {
-  grid-column: 2/6;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
+  grid-column: 2 / 6;
+  -ms-grid-row: 4;
   grid-row: 4;
   background-color: #f0f0f0;
 }
+
 .gtcomm .p8 {
-  grid-column: 2/6;
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 4;
+  grid-column: 2 / 6;
+  -ms-grid-row: 5;
   grid-row: 5;
   background-color: #b3b3b3;
 }
@@ -199,11 +280,13 @@ div[data-sg-type=sg-ajax] {
   background-repeat: no-repeat;
   background-position: center center;
 }
+
 div[data-sg-type=sg-ajax].isie {
   background-color: rgba(255, 255, 255, 0.8);
   background-image: url(images/wait1.gif);
   _background-size: 40px 40px;
 }
+
 div[data-sg-type=sg-ajax]:not(.isie) {
   background-color: rgba(0, 0, 0, 0.52);
   background-image: url(images/default2.svg);
@@ -218,28 +301,38 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   height: 100%;
   background-color: #f5e663;
   border: 10px solid rgba(136, 136, 136, 0.5);
+  display: -ms-grid;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: auto auto;
+  -ms-grid-columns: (1fr)[3];
+      grid-template-columns: repeat(3, 1fr);
+  -ms-grid-rows: auto  auto;
+      grid-template-rows: auto  auto;
 }
+
 .drag > * {
   border: 4px solid rgba(136, 136, 136, 0.5);
 }
+
 .drag > .a {
   text-align: center;
   vertical-align: middle;
   border: 4px solid rgba(136, 136, 136, 0.5);
 }
+
 .drag > .b {
   text-align: center;
   vertical-align: middle;
   background-color: #33a158;
   border: 8px solid rgba(136, 136, 136, 0.5);
 }
+
 .drag .c {
   background-color: #63277a;
 }
+
 .drag .e {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 2;
   grid-column: 2/4;
 }
 
@@ -350,15 +443,18 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   background-color: #e7e7e7;
   border: 2px solid #d4d3d3;
 }
+
 .sgWin > .caption {
   background-color: #083770;
   background: -webkit-gradient(linear, left top, left bottom, from(#e2e2e2), color-stop(50%, #dbdbdb), color-stop(51%, #d1d1d1), to(#fefefe));
   background: linear-gradient(to bottom, #e2e2e2 0%, #dbdbdb 50%, #d1d1d1 51%, #fefefe 100%);
   color: #727272;
 }
+
 .sgWin > .caption > .icon {
   border: 0px solid white;
 }
+
 .sgWin .rs.rb {
   border-radius: 5px;
   height: 0px !important;
@@ -380,12 +476,15 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   -webkit-box-shadow: 5px 6px 12px -4px rgba(0, 0, 0, 0.75);
           box-shadow: 5px 6px 12px -4px rgba(0, 0, 0, 0.75);
 }
+
 .sgWin.sevian.hidden {
   visibility: hidden;
 }
+
 .sgWin.sevian.hidden * {
   display: none;
 }
+
 .sgWin.sevian > .caption {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -399,6 +498,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   display: flex;
   cursor: default;
 }
+
 .sgWin.sevian > .caption > .icon {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -409,6 +509,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   pointer-events: none;
   margin-left: 4px;
 }
+
 .sgWin.sevian > .caption > .text {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -418,6 +519,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
 .sgWin.sevian > .caption > .win-btn {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -427,76 +529,96 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   height: 20px;
   display: inline-block;
 }
+
 .sgWin.sevian > .caption > .win-btn.min {
   background-position: 0px -20px;
 }
+
 .sgWin.sevian > .caption > .win-btn.min:HOVER {
   background-position: 0px -240px;
 }
+
 .sgWin.sevian > .caption > .win-btn.max {
   background-position: -40px -20px;
 }
+
 .sgWin.sevian > .caption > .win-btn.max:HOVER {
   background-position: -40px -240px;
 }
+
 .sgWin.sevian > .caption > .win-btn.auto {
   background-position: -20px -20px;
 }
+
 .sgWin.sevian > .caption > .win-btn.auto:HOVER {
   background-position: -20px -240px;
 }
+
 .sgWin.sevian > .caption > .win-btn.close {
   margin-right: 4px;
   background-position: -60px -20px;
 }
+
 .sgWin.sevian > .caption > .win-btn.close:HOVER {
   background-position: -60px -240px;
 }
+
 .sgWin.sevian > .body {
   overflow: auto !important;
 }
+
 .sgWin.sevian.min {
   height: auto !important;
   max-width: 160px !important;
 }
+
 .sgWin.sevian.min > .caption > .win-btn.min {
   display: none;
 }
+
 .sgWin.sevian.min > .body {
   -webkit-box-flex: 0 !important;
       -ms-flex: 0 0 0px !important;
           flex: 0 0 0px !important;
   height: 0px;
 }
+
 .sgWin.sevian.auto {
   height: auto !important;
   width: auto !important;
 }
+
 .sgWin.sevian.auto > .caption > .win-btn.auto {
   display: none;
 }
+
 .sgWin.sevian.auto > .body {
   height: auto !important;
   width: auto !important;
 }
+
 .sgWin.sevian.max {
   width: calc(100% - 20px) !important;
   height: calc(100% - 20px) !important;
   top: 10px !important;
   left: 10px !important;
 }
+
 .sgWin.sevian.max > .caption > .win-btn.max {
   display: none;
 }
+
 .sgWin.sevian.close {
   visibility: hidden;
 }
+
 .sgWin.sevian.moving {
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
           user-select: none;
 }
+
 .sgWin.sevian.resizing {
   -webkit-user-select: none;
      -moz-user-select: none;
@@ -530,16 +652,19 @@ div[data-sg-type=sg-ajax]:not(.isie) {
       -ms-flex-direction: column;
           flex-direction: column;
 }
+
 .sg-calendar > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
+
 .sg-calendar .y-bar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+
 .sg-calendar .y-bar > * {
   background-color: #e6e6e6;
   margin: 1px;
@@ -552,20 +677,24 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   line-height: 2em;
   cursor: pointer;
 }
+
 .sg-calendar .y-bar > *[data-index="2"] {
   color: #ececec;
   background-color: #858585;
   font-weight: bold;
 }
+
 .sg-calendar .y-bar > *:hover {
   background-color: #0070a0;
   color: white;
 }
+
 .sg-calendar .m-bar {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+
 .sg-calendar .m-bar > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -580,14 +709,17 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   transition: 0.5s all ease-out;
   cursor: pointer;
 }
+
 .sg-calendar .m-bar > *.active {
   color: #e2e2e2;
   background-color: #0070a0;
 }
+
 .sg-calendar .m-bar > *:hover {
   background-color: #a00000;
   color: white;
 }
+
 .sg-calendar .c-bar {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -600,10 +732,12 @@ div[data-sg-type=sg-ajax]:not(.isie) {
           align-items: center;
   vertical-align: middle;
 }
+
 .sg-calendar .c-bar * {
   font-size: 9pt;
   text-align: center;
 }
+
 .sg-calendar .c-bar > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -613,90 +747,111 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   padding: 4px;
   color: #6e6e6e;
 }
+
 .sg-calendar .c-bar > *:HOVER {
   background-color: #747474;
   color: white;
 }
+
 .sg-calendar .c-bar > * .p-month:hover, .sg-calendar .c-bar > * .n-month:hover, .sg-calendar .c-bar > * .p-year:hover, .sg-calendar .c-bar > * .n-year:hover {
   color: #a8eeee;
 }
+
 .sg-calendar .c-bar .c-month {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+
 .sg-calendar .c-bar .c-month > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
+
 .sg-calendar .c-bar .c-month select {
   width: 80px;
   -webkit-box-flex: 0 !important;
       -ms-flex: 0 0 auto !important;
           flex: 0 0 auto !important;
 }
+
 .sg-calendar .c-bar .c-year {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
+
 .sg-calendar .c-bar .c-year > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
+
 .sg-calendar > .calendar {
   width: 100%;
   height: 180px;
 }
+
 .sg-calendar > .calendar thead {
   background-color: darkgray;
   color: #ededed;
   text-align: center;
   font-weight: bold;
 }
+
 .sg-calendar > .calendar tbody {
   background-color: #ededed;
   font-size: 9pt;
 }
+
 .sg-calendar > .calendar tbody td {
   text-align: center;
   font-size: 8pt;
 }
+
 .sg-calendar > .calendar tbody .week {
   background-color: #e5e5e5;
 }
+
 .sg-calendar > .calendar tbody .week:hover {
   background-color: #ad0505;
   color: white;
 }
+
 .sg-calendar > .calendar tbody .day:hover {
   background-color: black;
   color: aqua;
 }
+
 .sg-calendar > .calendar tbody .m-prev {
   background-color: white;
 }
+
 .sg-calendar > .calendar tbody .m-next {
   background-color: white;
 }
+
 .sg-calendar > .calendar tbody .today {
   color: #e2e2e2;
   background-color: #0070a0;
 }
+
 .sg-calendar > .calendar tbody .m-now.active {
   color: white;
   background-color: #f3a600;
 }
+
 .sg-calendar > .calendar tbody .m-prev.active {
   color: white;
   background-color: #db4e0d;
 }
+
 .sg-calendar > .calendar tbody .m-next.active {
   color: white;
   background-color: #ff8800;
 }
+
 .sg-calendar .t-bar {
   font-size: 10pt;
   padding: 4px;
@@ -706,6 +861,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   color: #686868;
   background-color: #dbdbdb;
 }
+
 .sg-calendar .t-bar:hover {
   background-color: #1986d4;
   color: white;
@@ -718,6 +874,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   top: 0px;
   border-color: #c01515 transparent transparent transparent;
 }
+
 .sgcal-note:hover {
   border-color: black transparent transparent transparent !important;
 }
@@ -729,6 +886,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   left: 0px;
   top: 0px;
 }
+
 .sgcal-ind:hover {
   border-color: black transparent transparent transparent !important;
 }
@@ -738,6 +896,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   left: 0px;
   top: 0px;
 }
+
 .sg-popup.hidden {
   visibility: hidden;
 }
@@ -753,11 +912,13 @@ div[data-sg-type=sg-ajax]:not(.isie) {
           box-shadow: 5px 5px 5px rgba(132, 132, 132, 0.5);
   border-radius: 4px;
 }
+
 .cal-note .note-title {
   color: #b3e4ff;
   text-align: right;
-  border-bottom: 1px solid #b3e4ff;
+  border-bottom: 1px solid  #b3e4ff;
 }
+
 .cal-note .note-body {
   color: white;
 }
@@ -775,6 +936,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
 }
+
 .cal-picker > .body > * {
   height: 100%;
   -webkit-box-flex: 1;
@@ -788,47 +950,56 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   border: 2px solid #dadada;
   background-color: #f0f0f0;
 }
+
 .sg-form > .caption {
   background-color: #c0c0c0;
   text-align: center;
   color: white;
-  line-height: 2em;
+  line-height: 2.0em;
   text-transform: uppercase;
 }
+
 .sg-form > .page {
   font-size: 10pt;
   color: #6e6e6e;
   border: 1px solid #cfcece;
   padding: 4px;
 }
+
 .sg-form > .page > .field {
   margin-top: 5px;
 }
+
 .sg-form > .page > .field > .label {
   margin-left: 10px;
   text-transform: capitalize;
 }
+
 .sg-form > .page > .field > .label > .ind {
   display: inline-block;
   color: red;
   margin-left: 5px;
 }
+
 .sg-form > .page > .field > .input input {
   color: #585858;
   border: 1px solid #d8d7d7;
   height: 2em;
 }
+
 .sg-form > .page > .field > .input button {
-  height: 2em;
+  height: 2.0em;
   color: #585858;
   border: 1px solid #d8d7d7;
 }
+
 .sg-form > .page > .sg-menu {
   background-color: #e4e4e4;
   padding: 4px;
   border: 2px solid #ececec;
   margin-top: 10px;
 }
+
 .sg-form > .page > .sg-menu .option {
   line-height: 2em;
   background-color: #ff8800;
@@ -838,6 +1009,7 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   -webkit-transition: 0.5s all ease-out;
   transition: 0.5s all ease-out;
 }
+
 .sg-form > .page > .sg-menu .option:hover {
   background-color: #cf4404;
   color: #d8d7d7;
@@ -849,22 +1021,26 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   border: 2px solid #dadada;
   background-color: #f0f0f0;
 }
+
 .sg-grid > .caption {
   background-color: #c0c0c0;
   text-align: center;
   color: white;
-  line-height: 2em;
+  line-height: 2.0em;
   text-transform: uppercase;
 }
+
 .sg-grid > .grid-search {
   text-align: center;
   line-height: 2em;
 }
+
 .sg-grid > .grid-search input {
   color: #585858;
   border: 1px solid #d8d7d7;
   height: 2em;
 }
+
 .sg-grid > .grid-search .btn-search {
   background-color: #ff8800;
   color: #e7e7e7;
@@ -872,10 +1048,12 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   -webkit-transition: 0.5s all ease-out;
   transition: 0.5s all ease-out;
 }
+
 .sg-grid > .grid-search .btn-search:hover {
   background-color: #cf4404;
   color: #d8d7d7;
 }
+
 .sg-grid > .body > .grid-table > thead tr > td {
   font-size: 10pt;
   color: #6e6e6e;
@@ -883,18 +1061,22 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   text-transform: capitalize;
   background-color: #e4e4e4;
 }
+
 .sg-grid > .body > .grid-table > tbody > tr > td {
   color: #727272;
 }
+
 .sg-grid > .body > .grid-table > tbody > tr:nth-child(2n) {
   background-color: #e9e9e9;
 }
+
 .sg-grid > .sg-menu {
   background-color: #e4e4e4;
   padding: 4px;
   border: 2px solid #ececec;
   margin-top: 10px;
 }
+
 .sg-grid > .sg-menu .option {
   line-height: 2em;
   background-color: #ff8800;
@@ -904,7 +1086,114 @@ div[data-sg-type=sg-ajax]:not(.isie) {
   -webkit-transition: 0.5s all ease-out;
   transition: 0.5s all ease-out;
 }
+
 .sg-grid > .sg-menu .option:hover {
   background-color: #cf4404;
   color: #d8d7d7;
 }
+
+.sg-map {
+  height: 100%;
+}
+
+.gt-control-p1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.gt-control-p1 > * {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+
+.gt-control-device {
+  height: 100%;
+  overflow: hidden;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.gt-control-device > .sg-form {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 1 auto;
+          flex: 0 1 auto;
+  margin: 2px;
+  padding: 2px;
+}
+
+.gt-control-device > .sg-form > .caption {
+  display: none;
+}
+
+.gt-control-device > .sg-form > .page {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.gt-control-device > .sg-form > .page > .field {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.gt-control-device > .sg-form > .page > .field > .input {
+  margin-left: 4px;
+}
+
+.gt-control-device > .sg-tab {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  height: 100%;
+  margin: 2px;
+}
+
+.gt-control-p1 > * {
+  overflow: auto;
+}
+
+.gt-control-p1 .sg-menu {
+  font-size: 8pt;
+  padding: 4px;
+  margin: 5px;
+  border: 2px solid #dadada;
+  background-color: #f0f0f0;
+  max-width: 200px;
+}
+
+.gt-control-p1 .sg-menu .item {
+  border-bottom: 1px solid red;
+  background-color: #a00000;
+  padding: 2px;
+}
+
+.gt-control-p1 .sg-menu .item > .option {
+  text-decoration: none;
+  color: white;
+}
+
+.gt-control-p1 .sg-menu .item > .option > .text {
+  padding-left: 4px;
+}
+
+.gt-control-p1 .sg-menu .item:hover {
+  background-color: #464646;
+}
+/*# sourceMappingURL=Layout.css.map */
