--- a/css/sgTab.css
+++ b/css/sgTab.css
@@ -1,15 +1,28 @@
 /* Scss Document */
 .sg-tab {
-  border: 4px solid blue;
-  width: 500px;
-  background-color: slateblue;
+  margin: 0x;
+  border: 1px solid #b6b6b6;
+  width: 100%;
+  background-color: #cfcfcf;
+  padding: 4px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  overflow: hidden;
 }
 
 .sg-tab > .tab-menu {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 auto;
+          flex: 0 0 auto;
   -webkit-box-sizing: padding-box !important;
           box-sizing: padding-box !important;
   padding: 0px;
-  margin: 4px;
+  margin: 0px;
   padding: 0px;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -19,6 +32,7 @@
           justify-content: baseline;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
+  font-size: 9pt;
 }
 
 .sg-tab > .tab-menu > * {
@@ -27,8 +41,8 @@
   text-overflow: ellipsis "...";
   max-width: 90px;
   min-width: 70px;
-  -webkit-box-sizing: padding-box !important;
-          box-sizing: padding-box !important;
+  -webkit-box-sizing: padding-box;
+          box-sizing: padding-box;
   background-color: #6f6f6f;
   text-decoration: none;
   color: white;
@@ -47,14 +61,27 @@
 }
 
 .sg-tab > .tab-menu > *.tab-active {
-  background-color: #980009;
+  background-color: #cc530d;
 }
 
 .sg-tab > .tab-body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   color: white !important;
-  border-top: 4px solid #980009;
+  border-top: 4px solid #cc530d;
   margin: 0px;
   padding: 0px;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.sg-tab > .tab-body > * {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
   overflow: auto;
 }
 
@@ -63,7 +90,9 @@
 }
 
 .sg-tab > .tab-body > *.tab-active {
-  display: block !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
 }
 
 #tab11 {
@@ -99,11 +128,11 @@
 }
 
 .sg-tab-main > .sg-tab-menu > .sg-tab-imenu.sg-tab-active {
-  background-color: #980009;
+  background-color: #cc530d;
 }
 
 .sg-tab-main > .sg-tab-menu > .sg-tab-body {
-  border-top: 4px solid #980009;
+  border-top: 4px solid #cc530d;
 }
 
 .sg-tab-main > .sg-tab-menu > .sg-tab-body > .sg-tab-ibody {
@@ -115,7 +144,7 @@
 }
 
 .sg-tab-main > .sg-tab-body {
-  border-top: 4px solid #980009;
+  border-top: 4px solid #cc530d;
 }
 
 .sg-tab-main > .sg-tab-body > .sg-tab-ibody {
