--- a/css/sgTab.scss
+++ b/css/sgTab.scss
@@ -1,22 +1,29 @@
 /* Scss Document */
-$active_color : rgba(152,0,9,1.00);
+$active_color : rgb(204, 83, 13);
 
 
 .sg-tab{
-	border:4px solid blue;
+	margin:0x;
+	border:1px solid rgb(182, 182, 182);
 	//height: 100px;
-	width: 500px;
-	background-color: slateblue;
+	width: 100%;
+	background-color: rgb(207, 207, 207);
+	padding: 4px;
+	display: flex;
+	flex-direction: column;
+	overflow: hidden;
 	
 	>.tab-menu{
+		flex: 0 0 auto;
 		box-sizing: padding-box!important;
 		padding: 0px;
-		margin: 4px;
+		margin: 0px;
 		padding: 0px;
 		//list-style-type: none;
 		display: flex;
 		justify-content: baseline;
 		flex-wrap: wrap;
+		font-size: 9pt;
 		>*{
 			
 			//flex:1 1 auto;
@@ -26,7 +33,7 @@ $active_color : rgba(152,0,9,1.00);
 			max-width: 90px;
 			min-width: 70px;
 			//flex-direction: column;
-			box-sizing: padding-box!important;
+			box-sizing: padding-box;
 			background-color: rgba(111,111,111,1.00);
 			text-decoration: none;
 			color: white;
@@ -51,16 +58,23 @@ $active_color : rgba(152,0,9,1.00);
 
 	}
 	>.tab-body{
+		flex:1 1 auto;
 		color:white !important;
 		border-top:4px solid $active_color;
 		margin: 0px;
 		padding: 0px;
-		overflow: auto;
+		//overflow: scroll;
+		height: 100%;
+		display: flex;
+		>*{
+			flex:1 1 auto;
+			overflow: auto;
+		}
 		>*{
 
 			display: none;
 			&.tab-active{
-				display: block!important;
+				display: flex;
 			}
 		}
 	}	
