--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -23,7 +23,7 @@ body{
     padding:4px;
     >*{
         border:2px solid #d9480f;
-       // height: 50vh;
+        height: 50vh;
     }
     .p1 {
       grid-column: 1;
@@ -59,10 +59,7 @@ body{
     }
 }
 
-form{
-  height: 100%;
-  overflow: auto;
-}
+
 .sg-grid{
   height: 100%;
   //border:2px solid #52565a;
@@ -167,10 +164,17 @@ $alpha: 0;
   grid-template-columns: 190px repeat(4, 1fr);
   grid-template-rows: 30px 30px auto 30px 30px;
   >*{
-    //border:1px solid red;
+    overflow: auto;
+  }
+  form{
+    overflow: auto;
+    border:2px solid rgb(218, 204, 13);
+    min-height: 20px;
+    height: 100%;
+    width: 100%;
 
   }
-  //
+
   .p1 {
       grid-column: 1;
       grid-row: 1 / 6;
@@ -182,34 +186,65 @@ $alpha: 0;
       grid-column: 2 / 6;
       grid-row: 1;
       background-color: rgba(151, 151, 151, 1);
-      overflow: auto;
+      
       
   }
   .p3 {
       grid-column: 2 / 6;
       grid-row: 2;
       background-color: rgba(58, 58, 58, 1);
-      >*{
-        display: inline-block;
-      }
+      
   }
   .p4{
       grid-column: 2 / 4;
       grid-row: 3;
       background-color: rgba(187, 187, 187, 1);
       overflow: auto;
+      display: flex;
+      form{
+        //display: flex;
+        border-color: red;
+        >*{
+          flex:1 1 auto;
+          border:2px solid rgb(0, 255, 255);
+          overflow: none;
+          height: 100%;
+          display: flex;
+          flex-direction: column;
+          .gt-control-p11{
+            flex: 1 1 auto;
+            border: 2px solid green;
+            display: flex;
+            flex-direction: row;
+            >*{
+             //overflow: auto;
+            }
+            //align-content: space-between;
+
+            overflow: auto;
+            >*{
+              overflow: auto;
+              //width: auto;
+              flex: 1 1 auto;
+            }
+          }
+          
+        }
+      }
+      
   }
   .p5{
     grid-column: 4 / 5;
-      grid-row: 3;
+    grid-row: 3;
     background-color: rgba(202, 202, 202, 1);
-    overflow: auto;
+    //overflow: auto;
+    
   }
   .p6{
     grid-column: 5 / 6;
       grid-row: 3;
     background-color: rgba(112, 111, 111, 1);
-    overflow: auto;
+    //overflow: auto;
   }
   .p7 {
       grid-column: 2 / 6;
@@ -1004,33 +1039,20 @@ $delta_y_h: -240px;
 
 }
 
-.gt-control-p1{
-  display: flex;
-  flex-direction: row;
+.gt-control-p1_{
+ // display: flex;
+  //flex-direction: row;
   >*{
-    flex: 1 1 auto;
-  }
-}
-.gtcomm{
-  .p4{
-    //border:4px solid blue;
-   // overflow: hidden !important;
-   //height: 100%;
-
-    >form{
-      //border:4px solid blueviolet;
-      //overflow: auto;
-      //height: 100%;
-    }
+    flex: 1 0 auto;
   }
 }
 
-.gt-control-device{
+.gt-control-device_{
 
   //border:4px solid rgb(183, 192, 62);
-  height: 100%;
-  overflow: hidden;
-  display: flex;
+  //height: 100%;
+  overflow: auto;
+  display: inline-block;
   flex-direction: column;
   >.sg-form{
     flex:0 1 auto;
@@ -1057,35 +1079,39 @@ $delta_y_h: -240px;
   >.sg-tab{
     flex:1 1 auto;
     height: 100%;
-    margin:2px;
+    margin:0px;
   }
-
-  >*{
-    
-  }
-
-}
-
-.gt-control-p1{
 
   >*{
     overflow: auto;
   }
+
+}
+
+.gt-control-p1___{
+
+  >*{
+    //
+    overflow: auto;
+   // height: 100%;
+  }
   .sg-menu{
     font-size:8pt;
     padding: 4px;
-    margin: 5px;
+   // margin: 5px;
     border: 2px solid rgb(218, 218, 218);
     background-color: #f0f0f0;
     
-    max-width: 200px;
+    width: 250px;
+    user-select: none;
     .item{
-     border-bottom:1px solid red;
+      border-bottom:1px solid red;
       background-color: #a00000;
       padding:2px;
       >.option{
         text-decoration: none;
         color:white;
+        display: block;
         >.text{
           padding-left: 4px;
         }
@@ -1101,3 +1127,18 @@ $delta_y_h: -240px;
 
 }
 
+.input-multi{
+  //background-color:  rgba(173, 173, 173, 0.2);
+  border:1px solid rgb(206, 206, 206);
+  >span{
+    display: flex;
+    align-items: center;
+
+    >*{
+      flex:0 1 auto;
+    }
+
+    
+  }
+
+}
