--- a/css/sgTab.css
+++ b/css/sgTab.css
@@ -12,9 +12,8 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  overflow: hidden;
+  overflow: auto;
 }
-
 .sg-tab > .tab-menu {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -34,7 +33,6 @@
       flex-wrap: wrap;
   font-size: 9pt;
 }
-
 .sg-tab > .tab-menu > * {
   white-space: nowrap;
   overflow: hidden;
@@ -59,99 +57,37 @@
   /* Likely future */
   border-radius: 4px 12px 0px 0px;
 }
-
 .sg-tab > .tab-menu > *.tab-active {
   background-color: #cc530d;
 }
-
 .sg-tab > .tab-body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   color: white !important;
   border-top: 4px solid #cc530d;
-  margin: 0px;
-  padding: 0px;
-  height: 100%;
+  overflow: auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
 }
-
-.sg-tab > .tab-body > * {
+.sg-tab > .tab-body > div {
+  border: 4px solid red;
+}
+.sg-tab > .tab-body > div:not(.tab-active) {
+  display: none;
+}
+.sg-tab > .tab-body > div.tab-active {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: auto;
+  border: 4px solid red;
+}
+.sg-tab > .tab-body > div.tab-active > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
           flex: 1 1 auto;
   overflow: auto;
+  border: 4px solid #a33582;
 }
-
-.sg-tab > .tab-body > * {
-  display: none;
-}
-
-.sg-tab > .tab-body > *.tab-active {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-#tab11 {
-  border: 0px solid blue;
-  height: 300px;
-  width: 500px;
-}
-
-.sg-tab-main > .sg-tab-menu {
-  -webkit-box-sizing: padding-box !important;
-          box-sizing: padding-box !important;
-  padding: 4px;
-}
-
-.sg-tab-main > .sg-tab-menu > .sg-tab-imenu {
-  -webkit-box-sizing: padding-box !important;
-          box-sizing: padding-box !important;
-  background-color: #6f6f6f;
-  text-decoration: none;
-  color: white;
-  margin: 0px 2px 0px 0px;
-  padding: 4px 10px 4px 10px;
-  cursor: pointer;
-  -webkit-user-select: none;
-  /* Chrome 49+ */
-  -moz-user-select: none;
-  /* Firefox 43+ */
-  -ms-user-select: none;
-  /* No support yet */
-  user-select: none;
-  /* Likely future */
-  border-radius: 4px 12px 0px 0px;
-}
-
-.sg-tab-main > .sg-tab-menu > .sg-tab-imenu.sg-tab-active {
-  background-color: #cc530d;
-}
-
-.sg-tab-main > .sg-tab-menu > .sg-tab-body {
-  border-top: 4px solid #cc530d;
-}
-
-.sg-tab-main > .sg-tab-menu > .sg-tab-body > .sg-tab-ibody {
-  display: none;
-}
-
-.sg-tab-main > .sg-tab-menu > .sg-tab-body > .sg-tab-ibody.sg-tab-active {
-  display: block !important;
-}
-
-.sg-tab-main > .sg-tab-body {
-  border-top: 4px solid #cc530d;
-}
-
-.sg-tab-main > .sg-tab-body > .sg-tab-ibody {
-  display: none;
-}
-
-.sg-tab-main > .sg-tab-body > .sg-tab-ibody.sg-tab-active {
-  display: block !important;
-}
-/*# sourceMappingURL=sgTab.css.map */
