--- a/css/sgTab.scss
+++ b/css/sgTab.scss
@@ -11,7 +11,7 @@ $active_color : rgb(204, 83, 13);
 	padding: 4px;
 	display: flex;
 	flex-direction: column;
-	overflow: hidden;
+	overflow: auto;
 	
 	>.tab-menu{
 		flex: 0 0 auto;
@@ -58,85 +58,36 @@ $active_color : rgb(204, 83, 13);
 
 	}
 	>.tab-body{
-		flex:1 1 auto;
+		flex: 1 1 auto;
 		color:white !important;
 		border-top:4px solid $active_color;
-		margin: 0px;
-		padding: 0px;
-		//overflow: scroll;
-		height: 100%;
+		//margin: 0px;
+		//padding: 0px;
+		overflow: auto;
+		//height: 100%;
 		display: flex;
-		>*{
-			flex:1 1 auto;
-			overflow: auto;
-		}
-		>*{
-
-			display: none;
+	
+		>div{
+			//display: none;
+			border: 4px solid red;
+			&:not(.tab-active){
+				display: none;
+			}
+			
 			&.tab-active{
 				display: flex;
+				overflow: auto;
+				border: 4px solid red;
+
+				>*{
+					flex: 1 1 auto;
+					overflow: auto;
+					border: 4px solid rgb(163, 53, 130);
+					
+				}
 			}
 		}
 	}	
 }
 
-#tab11{
-
-	border:0px solid blue;
-	height: 300px;
-	width: 500px;
-	
-}
-
-
-//$active_color : rgba(13,62,177,1.00);
-.sg-tab-main{
-	>.sg-tab-menu{
-		box-sizing: padding-box!important;
-		padding: 4px;
-		>.sg-tab-imenu{
-			box-sizing: padding-box!important;
-			background-color: rgba(111,111,111,1.00);
-			text-decoration: none;
-			color:white;
-			margin: 0px 2px 0px 0px;
-			padding:4px 10px 4px 10px;
-			cursor: pointer;
-			-webkit-user-select: none;  /* Chrome 49+ */
-			-moz-user-select: none;     /* Firefox 43+ */
-			-ms-user-select: none;      /* No support yet */
-			user-select: none;          /* Likely future */ 
-			
-			
-			
-
-			border-radius: 4px 12px 0px 0px;
-			&.sg-tab-active{
-				background-color: $active_color;
-			}
-		}
-		
-		>.sg-tab-body{
-		border-top:4px solid $active_color;
-		>.sg-tab-ibody{
-
-			display: none;
-			&.sg-tab-active{
-				display: block!important;
-			}
-		}
-	}
-
-	}
-	>.sg-tab-body{
-		border-top:4px solid $active_color;
-		>.sg-tab-ibody{
-
-			display: none;
-			&.sg-tab-active{
-				display: block!important;
-			}
-		}
-	}	
-}
 
