--- a/css/sgTab.scss
+++ b/css/sgTab.scss
@@ -1,8 +1,39 @@
 /* Scss Document */
 $active_color : rgb(204, 83, 13);
-
-
 .sg-tab{
+	>.menu{
+
+		>.tab-menu{
+      		display: inline-block;
+			background-color: rgba(111,111,111,1.00);
+			text-decoration: none;
+			color: white;
+			white-space: nowrap;
+			overflow: hidden;
+			text-overflow: ellipsis'...';
+			max-width: 90px;
+			min-width: 70px;
+			box-sizing: padding-box;
+			border-radius: 4px 12px 0px 0px;
+			margin: 0px 2px 0px 0px;
+			padding:4px 10px 4px 10px;
+			cursor: pointer;
+			user-select: none;         
+			&.tab-active{
+				background-color: red;
+			}
+		}
+	}
+	>.body{
+		>.tab-body{
+			&:not(.tab-active){
+				display: none !important;
+			}
+		}
+	}	
+}
+
+.sg-tab_{
 	margin:0x;
 	border:1px solid rgb(182, 182, 182);
 	//height: 100px;
