--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -1226,19 +1226,26 @@ form{
 
 
 .list-menu{
-  position: relative;
+  position: absolute;
   border: 1px solid rgb(117, 115, 115);
   //max-height: 50px;
   //display: flex;
-  max-height: 200px;
+  max-height: 15em;
   user-select: none;
+  background-color: #ffffff;
 
   overflow: auto;
+  padding: 0px;
+  &.close {
+    visibility: hidden;
+    
+  }
   .option{
     text-transform: uppercase;
     padding: 0px;
     line-height: 1.5em;
-    margin: 2px;
+    background-color: rgb(202, 196, 196);
+    margin: 0px;
   }
   .option.active{
     background-color: red;
