--- a/css/sgTab.css
+++ b/css/sgTab.css
@@ -20,9 +20,11 @@
       -ms-user-select: none;
           user-select: none;
 }
+
 .sg-tab > .menu > .tab-menu.tab-active {
   background-color: red;
 }
+
 .sg-tab > .body > .tab-body:not(.tab-active) {
   display: none !important;
 }
@@ -42,6 +44,7 @@
           flex-direction: column;
   overflow: auto;
 }
+
 .sg-tab_ > .tab-menu {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 auto;
@@ -61,6 +64,7 @@
       flex-wrap: wrap;
   font-size: 9pt;
 }
+
 .sg-tab_ > .tab-menu > * {
   white-space: nowrap;
   overflow: hidden;
@@ -85,9 +89,11 @@
   /* Likely future */
   border-radius: 4px 12px 0px 0px;
 }
+
 .sg-tab_ > .tab-menu > *.tab-active {
   background-color: #cc530d;
 }
+
 .sg-tab_ > .tab-body {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -99,12 +105,15 @@
   display: -ms-flexbox;
   display: flex;
 }
+
 .sg-tab_ > .tab-body > div {
   border: 4px solid red;
 }
+
 .sg-tab_ > .tab-body > div:not(.tab-active) {
   display: none;
 }
+
 .sg-tab_ > .tab-body > div.tab-active {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -112,6 +121,7 @@
   overflow: auto;
   border: 4px solid red;
 }
+
 .sg-tab_ > .tab-body > div.tab-active > * {
   -webkit-box-flex: 1;
       -ms-flex: 1 1 auto;
@@ -119,3 +129,4 @@
   overflow: auto;
   border: 4px solid #a33582;
 }
+/*# sourceMappingURL=sgTab.css.map */
