--- a/css/Layout.css
+++ b/css/Layout.css
@@ -1106,12 +1106,13 @@ form {
 }
 
 .list-menu {
-  position: absolute;
+  position: fixed;
   border: 1px solid #bbbbbb;
   color: #838383;
   max-height: 15em;
   min-height: 2px;
   min-width: 50px;
+  width: auto;
   -webkit-user-select: none;
      -moz-user-select: none;
       -ms-user-select: none;
