--- a/css/Layout.css
+++ b/css/Layout.css
@@ -71,18 +71,6 @@ html, body {
   background-color: #52565a;
 }
 
-.sg-grid {
-  height: 100%;
-  overflow: auto;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-}
-
 table tr td {
   font-size: 8pt;
 }
@@ -856,16 +844,37 @@ div[data-sg-type=sg-ajax]:not(.isie) {
 }
 
 .sg-grid {
+  font-size: 9pt;
+  height: 100%;
+  overflow: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 4px;
   border: 2px solid #dadada;
   background-color: #f0f0f0;
+}
+.sg-grid > .body {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  overflow: auto;
 }
 .sg-grid > .caption {
   background-color: #c0c0c0;
   text-align: center;
   color: white;
-  line-height: 2em;
+  line-height: 1.5em;
   text-transform: uppercase;
+  font-weight: bold;
+}
+.sg-grid > .nav-paginator {
+  background-color: #dbdbdb;
+  text-align: center;
 }
 .sg-grid > .grid-search {
   text-align: center;
@@ -1253,4 +1262,65 @@ form {
 .x-menu > .item {
   min-height: 3em;
   border: 1px solid #4b17da;
+}
+.gt-cota {
+  display: grid;
+  height: 100%;
+  overflow: auto;
+  grid-gap: 0px;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 36px 36px auto 36px;
+  background-color: #52565a;
+}
+.gt-cota > * {
+  overflow: auto;
+  height: 100%;
+}
+.gt-cota > * > form {
+  height: 100%;
+  overflow: auto;
+}
+.gt-cota .p1 {
+  grid-row: 1;
+  grid-column: 1/6;
+  background-color: gray;
+}
+.gt-cota .p2 {
+  grid-row: 2;
+  grid-column: 1/3;
+}
+.gt-cota .p3 {
+  grid-row: 2;
+  grid-column: 3/4;
+}
+.gt-cota .p5 {
+  grid-row: 2;
+  grid-column: 4/5;
+}
+.gt-cota .p4 {
+  grid-row: 3;
+  grid-column: 1/3;
+}
+.gt-cota .p6 {
+  grid-row: 3;
+  grid-column: 3/4;
+}
+.gt-cota .p7 {
+  grid-row: 3;
+  grid-column: 4/5;
+}
+.gt-cota .p8 {
+  grid-row: 4;
+  grid-column: 1/3;
+  background-color: #008d81;
+}
+.gt-cota .p9 {
+  grid-row: 4;
+  grid-column: 3/4;
+  background-color: #008d81;
+}
+.gt-cota .p10 {
+  grid-row: 4;
+  grid-column: 4/5;
+  background-color: #008d81;
 }
