--- a/css/Layout.scss
+++ b/css/Layout.scss
@@ -82,13 +82,7 @@ body{
 }
 
 
-.sg-grid{
-  height: 100%;
-  //border:2px solid #52565a;
-  overflow: auto;
-  display: flex;
-  flex-direction: column;
-}
+
 .body{
     //height: 100%;
     //overflow: auto;
@@ -919,16 +913,35 @@ $delta_y_h: -240px;
 }
 
 .sg-grid{
+  font-size: 9pt;
+
+  height: 100%;
+  //border:2px solid #52565a;
+  overflow: auto;
+  display: flex;
+  flex-direction: column;
+
+
   padding: 4px;
   //margin: 5px;
   border: 2px solid rgb(218, 218, 218);
   background-color: #f0f0f0;
+
+  >.body{
+    flex:1 1 auto;
+    overflow: auto;
+  }
   >.caption{
     background-color: #c0c0c0;
     text-align: center;
     color:rgb(255, 255, 255);
-    line-height: 2.0em;
+    line-height: 1.5em;
     text-transform: uppercase;
+    font-weight: bold;
+  }
+  >.nav-paginator{
+    background-color: rgb(219, 219, 219);
+    text-align: center;
   }
 
   >.grid-search{
@@ -1419,4 +1432,86 @@ form{
     //color:rgb(214, 214, 214);
     //margin:5px;
   }
+}
+
+
+.gt-cota{
+  display: grid;
+  height: 100%;
+  overflow: auto;
+  grid-gap: 0px;
+  
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 36px 36px auto 36px;
+  background-color: #52565a;
+  >*{
+    overflow: auto;
+    height: 100%;
+    >form{
+      height: 100%;
+      overflow: auto;
+    }
+  }
+  .p1 {
+      grid-row: 1;  
+      grid-column: 1/6;
+      
+      background-color: rgb(128, 128, 128);
+  }
+  .p2 {
+    grid-row: 2;  
+    grid-column: 1/3;
+    
+    //background-color: rgb(219, 189, 17);
+  }
+  .p3 {
+    grid-row: 2;  
+    grid-column: 3/4;
+    
+    //background-color: rgb(49, 190, 37);
+  }
+  .p5 {
+    grid-row: 2;  
+    grid-column: 4/5;
+    
+    //background-color: rgba(39, 39, 39, 1.0);
+  }
+
+  .p4 {
+    grid-row: 3;  
+    grid-column: 1/3;
+    
+    //background-color: rgb(146, 101, 101);
+  }
+  .p6 {
+    grid-row: 3;  
+    grid-column: 3/4;
+    
+    //background-color: rgb(180, 124, 185);
+  }
+  .p7 {
+    grid-row: 3;  
+    grid-column: 4/5;
+    
+    //background-color: rgb(114, 113, 204);
+  }
+  .p8 {
+    grid-row: 4;  
+    grid-column: 1/3;
+    
+    background-color: rgb(0, 141, 129);
+  }
+  .p9 {
+    grid-row: 4;  
+    grid-column: 3/4;
+    
+    background-color: rgb(0, 141, 129);
+  }
+  .p10 {
+    grid-row: 4;  
+    grid-column: 4/5;
+    
+    background-color: rgb(0, 141, 129);
+  }
+  
 }
